# docs/swagger.yaml
@@ -64,6 +64,16 @@ definitions:
       url:
         type: string
     type: object
+  message.ProducerReq:
+    properties:
+      content:
+        type: string
+      title:
+        type: string
+    required:
+    - content
+    - title
+    type: object
   token.LoginReq:
     properties:
       password:
@@ -103,24 +113,6 @@ definitions:
     required:
     - password
     - username
-    type: object
-  user.QueryBy:
-    enum:
-    - 0
-    - 1
-    type: integer
-    x-enum-varnames:
-    - QueryById
-    - QueryByUsername
-  user.QueryReq:
-    properties:
-      query_by:
-        allOf:
-        - $ref: '#/definitions/user.QueryBy'
-        description: 查询条件
-      value:
-        description: 查询值
-        type: string
     type: object
   user.Role:
     enum:
@@ -179,7 +171,7 @@ definitions:
 info:
   contact: {}
 paths:
-  /api/v1/channel/create:
+  /api/v1/channel:
     post:
       consumes:
       - application/json
@@ -201,26 +193,7 @@ paths:
       summary: 创建频道
       tags:
       - channel
-  /api/v1/channel/delete/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: 删除频道
-      parameters:
-      - description: 频道ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-      summary: 删除频道
-      tags:
-      - channel
-  /api/v1/channel/query:
+  /api/v1/channel/{id}:
     post:
       consumes:
       - application/json
@@ -242,8 +215,7 @@ paths:
       summary: 查询频道
       tags:
       - channel
-  /api/v1/channel/update:
-    post:
+    put:
       consumes:
       - application/json
       description: 更新频道
@@ -262,6 +234,47 @@ paths:
       summary: 更新频道
       tags:
       - channel
+  /api/v1/channel/delete/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: 删除频道
+      parameters:
+      - description: 频道ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      summary: 删除频道
+      tags:
+      - channel
+  /api/v1/message:
+    post:
+      consumes:
+      - application/json
+      description: 客户端发送消息
+      parameters:
+      - description: 请求
+        in: body
+        name: req
+        required: true
+        schema:
+          $ref: '#/definitions/message.ProducerReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            type: object
+      summary: 客户端发送消息
+      tags:
+      - message
   /api/v1/token/login:
     post:
       consumes:
@@ -327,26 +340,6 @@ paths:
       tags:
       - token
   /api/v1/user:
-    get:
-      consumes:
-      - application/json
-      description: 查询用户
-      parameters:
-      - description: 查询用户请求参数
-        in: body
-        name: Object
-        schema:
-          $ref: '#/definitions/user.QueryReq'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/user.User'
-      summary: 查询用户
-      tags:
-      - 用户
     post:
       consumes:
       - application/json
@@ -365,6 +358,45 @@ paths:
           schema:
             $ref: '#/definitions/user.User'
       summary: 创建用户
+      tags:
+      - 用户
+  /api/v1/user/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: 删除用户
+      parameters:
+      - description: 用户ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      summary: 删除用户
+      tags:
+      - 用户
+    get:
+      consumes:
+      - application/json
+      description: 查询用户
+      parameters:
+      - description: 用户ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/user.User'
+      summary: 查询用户
       tags:
       - 用户
 swagger: "2.0"
